# airflow-sandbox

./: .editorconfig  .gitignore  README.md  pyproject.toml
dags/: .airflowignore  hello_world.py
dags/ilya40umov/common/: datasets.py
dags/ilya40umov/greetings/: greetings_consumer.py  greetings_producer.py
dags/ilya40umov/hello_world/: hello_world.py  hello_world_v2.py
dags/ilya40umov/misc/: default_args_dag.py
